--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apexcharts": "^4.3.0",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
@@ -22,7 +23,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
-    "sonner": "^1.7.1"
+    "sonner": "^1.7.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
