--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
     "sonner": "^1.7.1",
     "zustand": "^5.0.3"
