--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "firebase": "^11.2.0",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "zustand": "^5.0.3"
   },
