--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apexcharts": "^1.7.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
