--- a/package.json
+++ b/package.json
@@ -17,20 +17,26 @@
     "chart.js": "^4.4.7",
     "firebase": "^11.2.0",
     "framer-motion": "^11.15.0",
+    "i": "^0.3.7",
+    "npm": "^10.9.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "react-simple-captcha": "^9.3.1",
     "react-spinners": "^0.15.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
+    "svg-captcha": "^1.4.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
