--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.2.0",
     "framer-motion": "^11.15.0",
     "i": "^0.3.7",
+    "moment-timezone": "^0.5.47",
     "npm": "^10.9.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
