--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cropperjs": "^1.6.2",
+    "dayjs": "^1.11.13",
     "firebase": "^11.2.0",
     "framer-motion": "^11.15.0",
     "i": "^0.3.7",
