--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^11.2.0",
     "framer-motion": "^11.15.0",
     "i": "^0.3.7",
+    "luxon": "^3.5.0",
     "moment-timezone": "^0.5.47",
     "npm": "^10.9.2",
     "react": "^18.3.1",
