--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@vercel/speed-insights": "^1.1.0",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
