--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
+    "react-to-print": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "xlsx": "^0.18.5",
